# AChimera

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/rs/chimera/android/: App.kt  Global.kt  MainActivity.kt  Util.kt
app/src/main/java/rs/chimera/android/ffi/: ChimeraFfi.kt  Clash.kt
app/src/main/java/rs/chimera/android/model/: Profile.kt
app/src/main/java/rs/chimera/android/service/: NotificationHelper.kt  TunService.kt
app/src/main/java/rs/chimera/android/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/rs/chimera/android/ui/: BottomBar.kt  ChimeraApp.kt  ConnectionsScreen.kt  HomeScreen.kt  LogsScreen.kt  PanelScreen.kt  ProfileScreen.kt  SettingsScreen.kt
app/src/main/java/rs/chimera/android/viewmodel/: ConnectionsViewModel.kt  HomeViewModel.kt  ProfileViewModel.kt  SettingsViewModel.kt
app/src/main/java/rs/chimera/minimal/: MainActivity.kt
app/src/main/java/rs/chimera/minimal/ui/: ChimeraApp.kt
app/src/main/res/drawable/: ic_launcher_background.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: backup_rules.xml
core/: build.gradle.kts
core/src/main/java/uniffi/chimera_ffi/: chimera_ffi.kt
gradle/: libs.versions.toml
uniffi/: Cargo.toml  rust-toolchain.toml
uniffi/.cargo/: config.toml
uniffi/chimera-ffi/: Cargo.toml
uniffi/chimera-ffi/src/: controller.rs  lib.rs  log.rs
