[package]
name = "chimera-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "chimera_ffi"
crate-type = ["cdylib"]

[dependencies]
uniffi = { workspace = true }
jni = "0.21"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "net"] }
ipnet = "2"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
tokio-stream = "0.1"
serde_yaml = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "tokio"] }
http-body-util = "0.1"
urlencoding = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "std",
    "fmt",
] }
tracing-error = "0.2"
paranoid-android = "0.2"
color-eyre = "0.6"

[dependencies.clash-lib]
package = "clash-lib"
path = "../../../Chimera_Client/clash-lib"
features = [
    "ws",
    "trojan",
    "hysteria",
    "tproxy",
    "redir",
    "http_port",
    "mixed_port",
    "tracing",
]
default-features = true

[target.'cfg(unix)'.dependencies]
hyperlocal = "0.9"
